# xai_budgeting

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  aggregated_evaluation_results.csv  main.py  predictions.csv  predictions_vs_actuals.csv  pyproject.toml
config/: acc_config.yaml  api_config.yaml
evaluations/: evaluation_catboost.txt  evaluation_catboost_Alle.txt  evaluation_catboost_Aufwand.txt  evaluation_catboost_Aufwand_30_None.txt  evaluation_catboost_Aufwand_31_None.txt  evaluation_catboost_Aufwand_33_None.txt  evaluation_catboost_Aufwand_34_None.txt  evaluation_catboost_Aufwand_35_None.txt  evaluation_catboost_Aufwand_36_None.txt  evaluation_catboost_Aufwand_37_None.txt  evaluation_catboost_Aufwand_38_None.txt  evaluation_catboost_Aufwand_39_None.txt  evaluation_catboost_Ausserordentlicher_Aufwand.txt  evaluation_catboost_Ausserordentlicher_Ertrag.txt  evaluation_catboost_Betrieblicher_Aufwand.txt  evaluation_catboost_Betrieblicher_Ertrag.txt  evaluation_catboost_Ertrag.txt  evaluation_catboost_Ertrag_40_None.txt  evaluation_catboost_Ertrag_41_None.txt  evaluation_catboost_Ertrag_42_None.txt  evaluation_catboost_Ertrag_43_None.txt  evaluation_catboost_Ertrag_44_None.txt  evaluation_catboost_Ertrag_45_None.txt  evaluation_catboost_Ertrag_46_None.txt  evaluation_catboost_Ertrag_47_None.txt  evaluation_catboost_Ertrag_48_None.txt  evaluation_catboost_Ertrag_49_None.txt  evaluation_catboost_Finanz_Aufwand.txt  evaluation_catboost_Finanz_Ertrag.txt  evaluation_catboost_Investitionsausgaben.txt  evaluation_catboost_Investitionsausgaben_50_None.txt  evaluation_catboost_Investitionsausgaben_51_None.txt  evaluation_catboost_Investitionsausgaben_52_None.txt  evaluation_catboost_Investitionsausgaben_54_None.txt  evaluation_catboost_Investitionsausgaben_55_None.txt  evaluation_catboost_Investitionsausgaben_56_None.txt  evaluation_catboost_Investitionsausgaben_57_None.txt  evaluation_catboost_Investitionsausgaben_58_None.txt  evaluation_catboost_Investitionseinnahmen.txt  (+112 more)
experiment/: 001_subset.ipynb  (+5 more)
(+246 files in other folders)
