[tool.poetry]
name = "xai-budgeting"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
hydra-core = "^1.3.2"
pdoc = "^14.3.0"
pre-commit = "^3.6.0"
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
interrogate = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
