[tool.poetry]
name = "xai-budgeting"
version = "0.1.0"
description = ""
authors = ["Marc Grau <marcchristopher.grau@unisg.ch>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
hydra-core = "^1.3.2"
pdoc = "^14.3.0"
pre-commit = "^3.6.0"
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
interrogate = "^1.5.0"
requests = "^2.31.0"
mypy = "^1.8.0"
types-requests = "^2.31.0.20240106"
pandas = "^2.2.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
